code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__strict_stream_ids_missing_id_warning.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+


 » Missing stream id for assistant answer delta

 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change) Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
